<resources>
    <string name="app_name">KotlinView</string>
    <string name="startActivity">Start Activity</string>
    <string name="disableonbackpress">Disable OnBackPress</string>
    <string name="fabcolor">Fab Color</string>
    <string name="alertdialog">Alert Dialog</string>
    <string name="centerbtnprog">Center Button Prog</string>
    <string name="materialeff">Material Effect Button</string>
    <string name="circlebutton">Circle Button</string>
    <string name="fabpro">Fab Programmatically</string>
    <string name="onbackpressedexit">OnBackPressed Exit</string>
    <string name="lowercasetextbutton">LowerCase Text Button</string>
    <string name="disablebutton">Disable Button</string>
    <string name="setmarginbutton">Set Margin Button</string>
    <string name="getbuttontext">Get Button Text</string>
    <string name="doubleclick">Disable Double Click</string>
    <string name="changebutton">Change Button Text</string>
    <string name="buttonprog">Button Programmatically</string>
    <string name="anibutton">Animate Button</string>
    <string name="tintprog">Tint Programmatically</string>
    <string name="refreshactivity">Refresh Activity</string>
    <string name="onclickbutton">OnClick Button</string>
    <string name="fullscreenimage">FullScreen Image</string>
    <string name="circleimageview">Circle ImageView</string>
    <string name="resizeimage">Resize Image</string>
    <string name="uploadimage">Upload Image</string>
    <string name="compressimage">Compress Image</string>
    <string name="cropimage">Crop Image</string>
    <string name="imageoncanvas">Image On Canvas</string>
    <string name="textoverimage">Text Over Image</string>
    <string name="zommimage">Zoom Image</string>
    <string name="imageonclick">Image OnClick</string>
    <string name="rotateimage">Rotate Image</string>
    <string name="databindingimage">DataBinding Image</string>
    <string name="imagetobytearray">Image To ByteArray</string>
    <string name="roundedimage">Rounded Image</string>
    <string name="imagevisibility">Image Visibility</string>
    <string name="imagebackground">Image Background</string>
    <string name="borderimage">Border Image</string>
    <string name="aniimage">Animate Image</string>
    <string name="progimageview">Programmatically ImageView</string>
    <string name="emptyedittext">Empty EditText Check</string>
    <string name="hideandshowpass">Hide And Show Pass</string>
    <string name="progsetid">Programmatically Set Id</string>
    <string name="progdisableandenable">Programmatical Disable And Enable</string>
    <string name="closekeyboard">Close SoftKeyboard</string>
    <string name="stopfocus">Stop Focus</string>
    <string name="cursorcolor">Cursor Color</string>
    <string name="limitlength">Limit Length</string>
    <string name="edittextborder">EditText Border</string>
    <string name="edittexttextcolor">EditText Text Color</string>
    <string name="getedittextinput">Get EditText Input</string>
    <string name="clearedittext">Clear EditText</string>
    <string name="edittextprog">EditText Programmatically</string>
    <string name="edittextwithroundedcorner">EditText With Rounded Corner</string>
    <string name="edittextonclick">EditText OnClick</string>
    <string name="edittexttextwatcher">EditText TextWatcher</string>
    <string name="edittextdialog">EditText Dialog</string>
    <string name="getnumericvalue">Get Numeric Value</string>
    <string name="edittextshadow">EditText Shadow</string>
    <string name="paddingtextview">Padding TextView</string>
    <string name="margintextview">Margin TextView</string>
    <string name="roundedcornertextview">Rounded Corner TextView</string>
    <string name="htmlintextview">Html In TextView</string>
    <string name="backgroundtextviewcolor">Background TextView Color</string>
    <string name="gettextviewvalue">Get TextView Value</string>
    <string name="settexttotextview">Set Text To TextView</string>
    <string name="customfonttextview">Custom Font TextView</string>
    <string name="textviewwithunderline">TextView With Underline</string>
    <string name="textviewwithstrike">TextView With Strike</string>
    <string name="progradiobutton">Programmatically Radio Button</string>
    <string name="radiogrouporientation">Radio Group Orientation</string>
    <string name="radiobuttoncolor">Radio Button Color</string>
    <string name="enableanddisableradio">Enable And Disable Radio</string>
    <string name="clearradiogroup">Clear Radio Group</string>
    <string name="radiogrouponcheckchangelistner">Radio Group OnCheckChangeListner</string>
    <string name="radiobuttontext">Radio Button Text</string>
    <string name="radiobuttontextcolor">Radio Button TextColor</string>
    <string name="getselectedradiobutton">Get Selected RadioButton</string>
    <string name="customimagecheckbox">Custom Image CheckBox</string>
    <string name="rightpositioncheckbox">Right Position CheckBox</string>
    <string name="checkboxtextsize">CheckBox TextSize</string>
    <string name="getcheckboxvalue">Get CheckBox Value</string>
    <string name="addorremovecheckbox">Add Or Remove CheckBox</string>
    <string name="checkboxinrecyclerview">CheckBox In RecyclerView</string>
    <string name="checkboxalertdialog">CheckBox AlertDialog</string>
    <string name="getcheckedcheckboxvalue">Get Checked CheckBox Value</string>
    <string name="checkboxtextcolor">CheckBox TextColor</string>
    <string name="checkboxfont">CheckBox Font</string>
    <string name="storecheckboxstate">Store CheckBox State</string>
    <string name="resetcheckbox">Reset CheckBox</string>
    <string name="disableorenablecheckbox">Disable Or Enable CheckBox</string>
    <string name="oncheckedchangelistenercheckbox">OnCheckedChangeListener CheckBox</string>
    <string name="checkboxpadding">CheckBox Padding</string>
    <string name="checkboxbordercolor">CheckBox Border Color</string>
    <string name="groupcheckbox">Group CheckBox</string>
    <string name="checkboxdefaultvalue">CheckBox Default Value</string>
    <string name="multilinetextcheckbox">Multiline Text CheckBox</string>
    <string name="spinnertextcolor">Spinner TextColor</string>
    <string name="spinnertextsize">Spinner TextSize</string>
    <string name="spinnerhint">Spinner Hint</string>
    <string name="roundcornerspinner">Round Corner Spinner</string>
    <string name="spinnerbordercolor">Spinner Border Color</string>
    <string name="spinnerbackgroundcolor">Spinner Background Color</string>
    <string name="customspinnerimagetext">Custom Spinner Image Text</string>
    <string name="spinneritemcolor">Spinner Item Color</string>
    <string name="spinneritemvalue">Spinner ItemValue</string>
    <string name="enableanddisablespinner">Enable And Disable Spinner</string>
    <string name="populatespinnerxml">Populate Spinner Xml</string>
    <string-array name="user_name">
        <item>Henry</item>
        <item>Mark</item>
        <item>Jack</item>
        <item>Smith</item>
        <item>Clark</item>
        <item>Kelvin</item>
        <item>Denzel</item>
    </string-array>
    <string name="populatespinnerstring">Populate Spinner String</string>
    <string name="populatespinnerroomdb">Populate Spinner Room Db</string>
    <string name="populatespinnerapi">Populate Spinner Api</string>
    <string name="loading">Loading...</string>
    <string name="onitemselectedlistnerspinner">OnItemSelectedListner Spinner</string>
    <string name="spinnerinalertdialog">Spinner In AlertDialog</string>
    <string name="spinnernotifydatasetchange">Spinner NotifyDataSetChange</string>
    <string name="spinnerremoveitem">Spinner Remove Item</string>
    <string name="spinnerdatabinding">Spinner Databinding</string>
    <string name="multipleviewrecyclerview">Multiple View RecyclerView</string>
    <string name="horizlistrecyclerview">Horiz List RecyclerView</string>
    <string name="recyclerviewlinearlayoutmanager">RecyclerView LinearLayoutManager</string>
    <string name="recyclerviewonnextedscrollview">RecyclerView On NextedScrollView</string>
    <string name="recyclerviewgridlayoutmanager">RecyclerView GridLayoutManager</string>
    <string name="endlessrecyclerview">Endless RecyclerView</string>
    <string name="recyclerviewonclick">Recyclerview OnClick</string>
    <string name="recyclerviewswipedismiss">RecyclerView SwipeDismiss</string>
    <string name="recyclerviewnotifydatasetchange">RecyclerView NotifyDataSetChange</string>
    <string name="expandablerecyclerview">Expandable Recyclerview</string>
    <string name="recyclerviewdatabinding">Recyclerview Databinding</string>
    <string name="addorremoveitem">Add Or Remove Item</string>
    <string name="recyclerviewsearch">Recycler View Search</string>
    <string name="recyclerviewwithheader">RecyclerView With Header</string>
    <string name="emptyviewrecyclerview">Empty View RecyclerView</string>
    <string name="positionrecyclerview">Position RecyclerView</string>
    <string name="disablerecyclerviewscroll">Disable RecyclerView Scroll</string>
    <string name="selecteditemcolor">Selected Item Color</string>
    <string name="recyclerviewvisibleitem">RecyclerView Visible Item</string>
    <string name="disabletab">Disable Tab</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="defaulttab">Default Tab</string>
    <string name="tabmenuitemtextcolor">Tab Menu Item Text Color</string>
    <string name="tabmenuitemtextsize">Tab Menu Item Text Size</string>
    <string name="tabmenuitemtextfont">Tab Menu Item Text Font</string>
    <string name="changetitleontabswitch">Change Title On Tab Switch</string>
    <string name="selecttabprogrammatically">Select Tab Programmatically</string>
    <string name="recyclerviewinsidetab">RecyclerView Inside Tab</string>
    <string name="ontabchangelistner">OnTabChange Listner</string>
    <string name="detectonclickoncurrenttab">Detect OnClick On Current Tab</string>
    <string name="currenttabindicatorbackground">CurrentTab Indicator Background</string>
    <string name="currenttabposition">Current Tab Position</string>
    <string name="swipeviewwithtab">Swipe View With Tab</string>
    <string name="longclicklistnerontab">LongClickListner On Tab</string>
    <string name="tabinsidefragment">Tab Inside Fragment</string>
    <string name="tabhost">Tab Host</string>
    <string name="passdatatotwotab">Pass Data To Two Tab</string>
    <string name="viewpagerspeed">ViewPager Speed</string>
    <string name="viewpagervertical">ViewPager Vertical</string>
    <string name="addonpagechangelistner">Add OnPageChangeListner</string>
    <string name="disableviewpagerswipe">Disable ViewPager Swipe</string>
    <string name="viewpagerslidebutton">ViewPager Slide Button</string>
    <string name="navigationbackground">Navigation Background</string>
    <string name="navigationheaderview">Navigation Header View</string>
    <string name="menutextcolor">Menu Text Color</string>
    <string name="menutextfont">Menu Text Font</string>
    <string name="componentnavigation">Component Navigation</string>
    <string name="bottomdrawernavigation">Bottom Drawer Navigation</string>
    <string name="activitynav">Activity Navigation</string>
    <string name="addondestinationchangelistener">addOnDestinationChangeListener</string>
    <string name="actioninnav">Action in nav</string>
    <string name="menuitembadge">Menu Item Badge</string>
    <string name="nestedgraph">Nested Graph</string>
    <string name="safeargdatapassing">Safe Arg Data Passing</string>
    <string name="actionbaroncomponent">ActionBar On Component</string>
    <string name="collapsingtoolbar">Collapsing Toolbar</string>
    <string name="globalaction">Global Action</string>
    <string name="migratetocomponent">Migrate To Component</string>
    <string name="buttonnav">Button Navigation</string>
</resources>