<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_activityImageView2"
        android:title="@string/fullscreenimage"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activityImageView3"
        android:title="@string/circleimageview"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activityImageView4"
        android:title="@string/resizeimage"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activityImageView5"
        android:title="@string/uploadimage"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activityImageView6"
        android:title="@string/compressimage"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activityImageView7"
        android:title="@string/cropimage"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activityImageView8"
        android:title="@string/imageoncanvas"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activityImageView9"
        android:title="@string/textoverimage"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activityImageView10"
        android:title="@string/zommimage"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activityImageView11"
        android:title="@string/imageonclick"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activityImageView12"
        android:title="@string/rotateimage"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activityImageView13"
        android:title="@string/databindingimage"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activityImageView14"
        android:title="@string/imagetobytearray"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activityImageView15"
        android:title="@string/roundedimage"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activityImageView16"
        android:title="@string/imagevisibility"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activityImageView17"
        android:title="@string/imagebackground"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activityImageView18"
        android:title="@string/borderimage"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activityImageView19"
        android:title="@string/aniimage"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activityImageView20"
        android:title="@string/progimageview"
        android:orderInCategory="100"
        app:showAsAction="never" />


</menu>
