<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_activitynavigation2"
        android:title="@string/navigationbackground"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activitynavigation3"
        android:title="@string/navigationheaderview"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activitynavigation4"
        android:title="@string/menutextcolor"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activitynavigation5"
        android:title="@string/menutextfont"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activitynavigation6"
        android:title="@string/componentnavigation"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activitynavigation7"
        android:title="@string/bottomdrawernavigation"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activitynavigation8"
        android:title="@string/activitynav"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activitynavigation9"
        android:title="@string/addondestinationchangelistener"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activitynavigation10"
        android:title="@string/actioninnav"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activitynavigation11"
        android:title="@string/menuitembadge"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activitynavigation12"
        android:title="@string/nestedgraph"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activitynavigation13"
        android:title="@string/safeargdatapassing"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activitynavigation14"
        android:title="@string/actionbaroncomponent"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activitynavigation15"
        android:title="@string/collapsingtoolbar"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activitynavigation16"
        android:title="@string/globalaction"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activitynavigation17"
        android:title="@string/migratetocomponent"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activitynavigation18"
        android:title="@string/buttonnav"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
