<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_activitytab2"
        android:title="@string/disabletab"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activitytab3"
        android:title="@string/defaulttab"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activitytab4"
        android:title="@string/tabmenuitemtextcolor"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activitytab5"
        android:title="@string/tabmenuitemtextsize"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activitytab6"
        android:title="@string/tabmenuitemtextfont"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activitytab7"
        android:title="@string/changetitleontabswitch"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activitytab8"
        android:title="@string/selecttabprogrammatically"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activitytab9"
        android:title="@string/recyclerviewinsidetab"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activitytab10"
        android:title="@string/ontabchangelistner"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
